[package]
name = "easy-pool"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Pool"
keywords = ["Pool","Memory"]
authors = ["Netskillz <netskillz@protonmail.com>"]
repository = "https://github.com/netskillzgh/easy-pool"

[dependencies]
parking_lot = "0.12.0"
crossbeam = "0.8.1"

[dev-dependencies]
criterion = "0.3"
rayon = "1.5.1"

[[bench]]
name = "bench"
harness = false