[package]
name = "easy-pool"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "An easy way to reuse your objects without reallocating memory every time."
keywords = ["pool", "memory", "cache", "recycle", "allocate"]
categories = ["memory-management", "caching"]
authors = ["Netskillz <netskillz@protonmail.com>"]
repository = "https://github.com/netskillzgh/easy-pool"

[dependencies]
parking_lot = "0.12.0"
crossbeam = "0.8.1"
once_cell = "1.13.0"

[dev-dependencies]
criterion = "0.3"
rayon = "1.5.1"

[[bench]]
name = "bench"
harness = false

[dependencies.easy_pool_proc_macro]
version = "0.1.0"
path = "easy_pool_proc_macro"

[[example]]
name = "simple"